--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -1,10 +1,27 @@
-#selector-wrapper{
+.config-step{
+	display: block;
+	position: relative;
+	width: 90%;
+	margin: auto;
+	background-color: #EEEEEE;
+	padding: 1em 1em 1.5em 1em;
+}
+
+#colors{
+	display: none;
+}
+
+#specials{
+	display: none;
+}
+
+#points-wrapper{
 	display: block;
 	height:10px;
 	text-align: center;
 }
 
-.selector{
+.point{
 	display: inline-block;
 	height: 10px;
 	width: 10px;
@@ -12,6 +29,10 @@
 	border-radius: 5px;
 }
 
-.selector:hover{
+.point:hover{
 	background-color: #CCCCCC;
+}
+
+#flavors-point{
+	background-color: #000000;
 }
