--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -1,3 +1,7 @@
+*{
+	font-family: Arial, sans-serif;
+}
+
 .config-step{
 	display: block;
 	position: relative;
@@ -17,6 +21,8 @@
 
 #points-wrapper{
 	display: block;
+	position: relative;
+	top: 2em;
 	height:10px;
 	text-align: center;
 }
