--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -23,16 +23,16 @@
 	display: block;
 	position: relative;
 	top: 2em;
-	height:10px;
+	height:0.7em;
 	text-align: center;
 }
 
 .point{
 	display: inline-block;
-	height: 10px;
-	width: 10px;
+	height: 0.5em;
+	width: 0.5em;
 	border: 1px solid black;
-	border-radius: 5px;
+	border-radius: 30em;
 	cursor: pointer;
 }
 
