--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -2,9 +2,69 @@
 	font-family: Arial, sans-serif;
 }
 
+
+#directory{
+	display: block;
+	background-color: rgba(0, 0, 0, 0.6);
+	width: 100%;
+	height: 4em;
+	position: fixed;
+	top: 0;
+	left: 0;
+	text-align: center;
+	z-index: 3;
+}
+
+#logo{
+	display: inline-block;
+	position: absolute;
+	height: 6em;
+	width: 6em;
+	border-radius: 30em;
+	top: -1em;
+	left: 0.5em;
+	z-index: 3;
+}
+ 
+#logo-img{
+	height: 6em;
+	width: 6em;
+	border-radius: 30em;
+}
+
+.dir-item{
+	display: inline-block;
+	position: relative;
+	margin: auto;
+	height: 2em;
+	width: 5em;
+	top: 1em;
+	color: rgba(255, 255, 255, 0.9);
+	border-radius: 15px;
+	z-index: 3;
+}
+ 
+.dir-item:hover{
+	background-color: rgba(255, 255, 255, 0.2);
+	z-index: 3;
+}
+ 
+.dir-link{
+	display: block;
+	position: relative;
+	margin: auto;
+	text-align: center;
+	color: rgba(255, 255, 255, 0.9);
+	text-decoration: none;
+	font-size: 1.5em;
+	font-family: Calibri, sans-serif;
+	z-index: 3;
+}
+
 .config-step{
 	display: block;
 	position: relative;
+	top: 5em;
 	width: 90%;
 	margin: auto;
 	background-color: #EEEEEE;
