--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -1,3 +1,19 @@
+html{
+	background: url('https://scontent-a-vie.xx.fbcdn.net/hphotos-xpa1/t31.0-8/10631201_828426333841759_7997915809994208160_o.jpg') no-repeat center center fixed;
+	background-size: cover;
+}
+
+#shade{
+	display: block;
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.4);
+	z-index: 1;
+}
+
 *{
 	font-family: Arial, sans-serif;
 }
@@ -65,10 +81,41 @@
 	display: block;
 	position: relative;
 	top: 5em;
+	height: auto;
 	width: 90%;
 	margin: auto;
-	background-color: #EEEEEE;
-	padding: 1em 1em 1.5em 1em;
+	padding-bottom: 2em;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #FFFFFF;
+	z-index: 2;
+}
+
+.step-header{
+	display: block;
+	position: relative;
+	top: 0.5em;
+	margin-bottom: 2em;
+	text-align: center;
+	font-size: 3em;
+	font-weight: bold;
+}
+
+.option-label{
+	display: block;
+	position: relative;
+	margin: 0em 1em 0em 7em;
+	font-size: 2em;
+}
+
+.config-option{
+	cursor: pointer;
+}
+
+img{
+	display: block;
+	position: relative;
+	top: -11em;
+	left: 50em;
 }
 
 #colors{
@@ -82,9 +129,10 @@
 #points-wrapper{
 	display: block;
 	position: relative;
-	top: 2em;
+	top: 7em;
 	height:0.7em;
 	text-align: center;
+	z-index: 2;
 }
 
 .point{
