--- a/configuration/confirm/order/stylesheet.css
+++ b/configuration/confirm/order/stylesheet.css
@@ -52,9 +52,10 @@ html{
 	display: inline-block;
 	position: relative;
 	margin: auto;
-	height: 2em;
-	width: 10em;
-	top: 1em;
+	height: 2.25em;
+	width: 7.5em;
+	top: 0.8125em;
+	line-height: 2.25em;
 	color: rgba(255, 255, 255, 0.9);
 	border-radius: 15px;
 	z-index: 3;
