--- a/stylesheet.css
+++ b/stylesheet.css
@@ -155,21 +155,21 @@ a{
 #introduction{
 	display: block;
 	position: relative;
-	top: 10em;
-	margin: auto;
+	margin-top: 10em;
 	height: 6.5em;
 	width: 18em;
 	padding: 0.5em;
 	text-align: center;
 	font-size: 2.5em;
 	z-index: 2;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #btn-order{
 	display: block;
 	position: relative;
 	top: 1.5em;
-	margin: auto;
 	height: 1.4em;
 	width: 10em;
 	padding: 0.3em;
@@ -178,6 +178,8 @@ a{
 	font-size: 2.5em;
 	z-index: 2;
 	margin-bottom: 6;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #impressum{
