--- a/staff/stylesheet.css
+++ b/staff/stylesheet.css
@@ -91,26 +91,34 @@ a{
 
 #staff-container{
 	display: block;
-	position: absolute;
-	top: 12.5%;
-	height: 75%;
+	position: relative;
+	top: 7em;
+	height: 105%;
 	width: 90%;
-	left: 5%;
 	margin: auto;
-	border: 2px solid black;
 	color: #FFFFFF;
 	z-index: 2;
 }
 
-.staff{
+/*.staff{
 	display: block;
 	position: relative;
 	height: 13em;
 	width: 100%;
 	z-index: 2;
-}
+}*/
+
+.staffMember{
+	display: block;
+	position: relative;
+	height: 15em;
+	width: 100%;
+	z-index: 2;
+	}
 
 .staffIMGcont{
+	position: relative;
+	top: 1em;
 	display: inline-block;
 	height: 13em;
 	width: 10%em;
@@ -142,15 +150,26 @@ a{
 
 .staffDescr{
 	display: inline-block;
-	height: 15em;
+	height: 13em;
 	width: 85%;
 	vertical-align: middle;
+	position: relative;
+	left: 4%;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 15px;
+}
+
+.staffDescrTxt{
+	color: #FFFFFF;
+	font-size: 2em;
+	font-family: Calibri, sans-serif;
+	margin: 0.5em 0 0 0.5em;
 }
 
 #impressum{
 	display: block;
 	position: relative;
-	top: 15em;
+	top: 10em;
 	height: 3em;
 	width: 100%;
 	padding: 0.3em;
