--- a/configuration/confirm/stylesheet.css
+++ b/configuration/confirm/stylesheet.css
@@ -16,6 +16,8 @@ html{
 
 *{
 	font-family: Arial, sans-serif;
+	padding: 0;
+	margin: 0;
 }
 
 
@@ -78,11 +80,11 @@ html{
 	z-index: 3;
 }
 
-.config-step{
+.wrapper{
 	display: block;
 	position: absolute;
 	top: 12.5%;
-	height: 75%;
+	height: 45em;
 	width: 90%;
 	left: 5%;
 	margin: auto;
@@ -91,11 +93,11 @@ html{
 	z-index: 2;
 }
 
-.step-header{
+#header{
 	display: block;
 	position: relative;
-	top: 0.5em;
-	margin-bottom: 2em;
+	top: 0;
+	margin-bottom: 1em;
 	text-align: center;
 	font-size: 3em;
 	font-weight: bold;
@@ -114,21 +116,47 @@ html{
 }
 
 .button{
-	display: block;
+	display: table-cell;
+	vertical-align: middle;
 	position: absolute;
 	height: 2.5em;
 	width: 7.5em;
 	line-height:2.5em;
 	padding: 0.2em;
 	background-color: #ff8c00;
+	color: white;
 	text-align: center;
 	font-size: 1.5em;
 	z-index: 2;
 	cursor: pointer;
 	border-radius: 5px;
+	border: none;
 }
 
 #btn-Finished{
 	right: 3em;
 	bottom: 2em;
+}
+
+#impressum{
+	display: block;
+	position: absolute;
+	top: 55em;
+	height: 3em;
+	width: 100%;
+	padding: 0.3em;
+	background-color: rgba(255, 255, 255, 1);
+	text-align: center;
+	font-size: 1em;
+	z-index: 2;
+	}
+
+#impr-heading{
+	font-size: 1.2em;
+	padding: 0.15em;
+}
+
+.impr-paragraph{
+	color: #9C9C9C;
+	margin: auto;
 }
