--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -129,18 +129,21 @@ img{
 }
 
 .button{
-	display: block;
+	display: table-cell;
+	vertical-align: middle;
 	position: absolute;
 	height: 2.5em;
 	width: 7.5em;
 	line-height:2.5em;
 	padding: 0.2em;
 	background-color: #ff8c00;
+	color: white;
 	text-align: center;
 	font-size: 1.5em;
 	z-index: 2;
 	cursor: pointer;
 	border-radius: 5px;
+	border: none;
 }
  
 #flavors-nextBtn{
@@ -195,4 +198,27 @@ img{
 
 #flavors-point{
 	background-color: #000000;
+}
+
+#impressum{
+	display: block;
+	position: relative;
+	top: 15em;
+	height: 3em;
+	width: 100%;
+	padding: 0.3em;
+	background-color: rgba(255, 255, 255, 1);
+	text-align: center;
+	font-size: 1em;
+	z-index: 2;
+	}
+
+#impr-heading{
+	font-size: 1.2em;
+	padding: 0.15em;
+}
+
+.impr-paragraph{
+	color: #9C9C9C;
+	margin: auto;
 }
