--- a/configuration/confirm/stylesheet.css
+++ b/configuration/confirm/stylesheet.css
@@ -115,6 +115,20 @@ html{
 	display: inline-block;
 }
 
+.inputLabel{
+	font-family: Calibri,sans-serif;
+	font-weight: bold;
+	color: #3f3f3f;
+	font-size: 1em;
+	background-color: #ededed;
+	height: 1.5em;
+	width: 13em;
+	padding: 1px 3px 1px 3px;
+	box-shadow: inset 0 0 0 #FFFFFF;
+	box-shadow: inset 0 0 0 0 #FFFFFF;
+	border: none;
+}
+
 .button{
 	display: table-cell;
 	vertical-align: middle;
