--- a/configuration/confirm/stylesheet.css
+++ b/configuration/confirm/stylesheet.css
@@ -86,7 +86,7 @@ html{
 	top: 12.5%;
 	height: 45em;
 	width: 90%;
-	left: 10%;
+	left: 5%;
 	margin: auto;
 	background-color: rgba(0, 0, 0, 0.5);
 	color: #FFFFFF;
@@ -96,11 +96,26 @@ html{
 #header{
 	display: block;
 	position: relative;
-	top: 0;
+	top: 0.75em;
 	margin-bottom: 1em;
 	text-align: center;
 	font-size: 3em;
 	font-weight: bold;
+}
+
+#smallWrapper{
+	display: block;
+	position: relative;
+	height: 100%;
+	width: 95%;
+	left: 5%;
+}
+
+.verysmallWrapper{
+	display: block;
+	position: relative;
+	width: 97.5%;
+	left: 2.5%;
 }
 
 .option-label{
@@ -132,19 +147,20 @@ html{
 .button{
 	display: table-cell;
 	vertical-align: middle;
-	position: absolute;
+	text-align: center;
+	position: relative;
 	height: 2.5em;
 	width: 7.5em;
 	line-height:2.5em;
-	padding: 0.2em;
+	padding: 0;
 	background-color: #ff8c00;
 	color: white;
-	text-align: center;
 	font-size: 1.5em;
 	z-index: 2;
 	cursor: pointer;
 	border-radius: 5px;
 	border: none;
+	right: 15%;
 }
 
 #btn-Finished{
