--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,11 +34,11 @@ a{
 #directory{
 	display: block;
 	background-color: rgba(0, 0, 0, 0.6);
-	width: 100%;
 	height: 4em;
 	position: fixed;
 	top: 0;
 	left: 0;
+	right: 0;
 	text-align: center;
 	z-index: 3;
 }
@@ -155,21 +155,24 @@ a{
 #introduction{
 	display: block;
 	position: relative;
-	margin-top: 10em;
+	top: 5em;
 	height: 6.5em;
 	width: 18em;
-	padding: 0.5em;
 	text-align: center;
 	font-size: 2.5em;
 	z-index: 2;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
 }
+
+#btn-wrapper{
+	position: relative;
+	top: 5em;
+	padding: 1.5em;
+}	
 
 #btn-order{
 	display: block;
 	position: relative;
-	top: 1.5em;
 	height: 1.4em;
 	width: 10em;
 	padding: 0.3em;
@@ -177,15 +180,13 @@ a{
 	text-align: center;
 	font-size: 2.5em;
 	z-index: 2;
-	margin-bottom: 6;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
 }
 
 #impressum{
 	display: block;
-	position: relative;
-	top: 15em;
+	position: absolute;
+	bottom: 0;
 	height: 3em;
 	width: 100%;
 	padding: 0.3em;
