--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -202,8 +202,8 @@ img{
 
 #impressum{
 	display: block;
-	position: relative;
-	top: 15em;
+	position: absolute;
+	top: 57em;
 	height: 3em;
 	width: 100%;
 	padding: 0.3em;
