--- a/stylesheet.css
+++ b/stylesheet.css
@@ -157,16 +157,16 @@ a{
 	position: relative;
 	top: 7.5em;
 	height: 19.5em;
-	width: 13em;
+	width: 34.67em;
 	vertical-align: middle;
 	text-align: center;
 	margin: auto;
 	z-index: 2;
 }
 
-#limoIMG{
+#limoVID{
 	height: 19.5em;
-	width: 13em;
+	width: 34.67em;
 }
 
 #introduction{
