fixed some minor style errors and tried something with CSS. Works on my phone screen but I still have to test it on a PC.

--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -202,8 +202,8 @@ img{
 
 #impressum{
 	display: block;
-	position: absolute;
-	top: 60em;
+	position: relative;
+	bottom: 0;
 	height: 3em;
 	width: 100%;
 	padding: 0.3em;
