--- a/configuration/stylesheet.css
+++ b/configuration/stylesheet.css
@@ -202,8 +202,9 @@ img{
 
 #impressum{
 	display: block;
-	position: relative;
-	bottom: 0;
+	position: absolute;
+	top: 60em;
+	left: 0;
 	height: 3em;
 	width: 100%;
 	padding: 0.3em;
